syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//系统-通知消息
service SysNotifyMessage {
  //系统-通知消息-单条数据查询
  rpc GetSysNotifyMessageInfo(GetSysNotifyMessageInfoReq) returns (GetSysNotifyMessageInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_notify_message/info"};
  }
  //系统-通知消息-列表数据查询
  rpc GetSysNotifyMessageList(GetSysNotifyMessageListReq) returns (GetSysNotifyMessageListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_notify_message/list"};
  }
  // 系统-通知消息-我的-列表
  rpc GetSysNotifyMessageMyList(GetSysNotifyMessageMyListReq) returns (GetSysNotifyMessageMyListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_notify_message/my/list"};
  }
  // 系统-通知消息-我的-未读列表
  rpc GetSysNotifyMessageMyUnreadList(GetSysNotifyMessageMyUnreadListReq) returns (GetSysNotifyMessageMyUnreadListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_notify_message/my/unread_list"};
  }
  // 系统-通知消息-我的-未读数量
  rpc GetSysNotifyMessageMyUnreadCount(GetSysNotifyMessageMyUnreadCountReq) returns (GetSysNotifyMessageMyUnreadCountReply) {
    option (google.api.http) = {get: "/admin/v1/sys_notify_message/my/unread_count"};
  }
  // 系统-通知消息-我的-指定消息已读
  rpc UpdateSysNotifyMessageRead(UpdateSysNotifyMessageReadReq) returns (UpdateSysNotifyMessageReadReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_notify_message/my/update_read"
      body: "*"
    };
  }
  // 系统-通知消息-我的-全部已读
  rpc UpdateSysNotifyMessageAllRead(UpdateSysNotifyMessageAllReadReq) returns (UpdateSysNotifyMessageAllReadReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_notify_message/my/update_all_read"
      body: "*"
    };
  }
}

//系统-通知消息信息
message SysNotifyMessageInfo {
  string id = 1; // id
  string tenantId = 2; // 租户id
  string type = 3; // 消息类型
  string subject = 4; // 主题
  string content = 5; // 内容
  string sender = 6; // 发送人
  string receiver = 7; // 接收人
  string sendTime = 8; // 发送时间
  string readTime = 9; // 阅读时间
  string extend = 10; // 扩展
  string senderName = 11; // 发送人名称
  string senderAvatar = 12; // 发送人头像
  string receiverName = 13; // 接收人名称
  string receiverAvatar = 14; // 接收人头像
}

//请求-系统-通知消息-单条数据查询
message GetSysNotifyMessageInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-系统-通知消息-单条数据查询
message GetSysNotifyMessageInfoReply {
  SysNotifyMessageInfo info = 1;
}

//请求-系统-通知消息-列表数据查询
message GetSysNotifyMessageListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
  string receiver = 3; // 接收人
  repeated string sendTime = 4; // 发送时间
  int32 readStatus = 5; // 阅读状态    1: 已读 -1: 未读
}

//响应-系统-通知消息-列表数据查询
message GetSysNotifyMessageListReply {
  int32 total = 1; //总数
  repeated SysNotifyMessageInfo list = 2; // 列表数据
}

message GetSysNotifyMessageMyListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
  string sender = 3; // 发送人
  repeated string sendTime = 4; // 发送时间
  int32 readStatus = 5; // 阅读状态    1: 已读 -1: 未读
}

message GetSysNotifyMessageMyListReply {
  int32 total = 1; //总数
  repeated SysNotifyMessageInfo list = 2; // 列表数据
}

message GetSysNotifyMessageMyUnreadListReq {}

message GetSysNotifyMessageMyUnreadListReply {
  repeated SysNotifyMessageInfo list = 1; // 列表数据
}

message GetSysNotifyMessageMyUnreadCountReq {}

message GetSysNotifyMessageMyUnreadCountReply {
  int32 count = 1; // 未读数量
}

message UpdateSysNotifyMessageReadReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["ids"]
    }
  };

  repeated string ids = 1 [(buf.validate.field).repeated = {min_items: 1}]; // id列表
}

message UpdateSysNotifyMessageReadReply {}

message UpdateSysNotifyMessageAllReadReq {}

message UpdateSysNotifyMessageAllReadReply {}
